# ec-validator

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: validators.rs
src/: cedula.rs  error.rs  iban.rs  lib.rs  ruc.rs  wasm.rs
